Added ISNet and InSPyReNet bg remove models

--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2016,4 +2016,6 @@
     <string name="model_ddcolor">يوفر نموذج DDColor الكامل تلوينًا عالي الجودة للصور العامة مع الحد الأدنى من الشوائب. أفضل خيار لجميع نماذج التلوين.</string>
     <string name="model_ddcolor_artistic">مجموعات البيانات الفنية الخاصة والمدربة على DDColor؛ ينتج نتائج تلوين متنوعة وفنية مع عدد أقل من التحف اللونية غير الواقعية.</string>
     <string name="model_birefnet">نموذج BiRefNet خفيف الوزن يعتمد على Swin Transformer لإزالة الخلفية بدقة.</string>
+    <string name="model_inspyrenet">إزالة خلفية عالية الجودة بحواف حادة والحفاظ على التفاصيل بشكل ممتاز، خاصة على الكائنات المعقدة والخلفيات الصعبة.</string>
+    <string name="model_isnet">نموذج إزالة الخلفية الذي ينتج أقنعة دقيقة ذات حواف ناعمة، مناسبة للأشياء العامة والحفاظ على التفاصيل بشكل معتدل.</string>
 </resources>
