--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2014,4 +2014,6 @@
     <string name="model_ddcolor">Поўная мадэль DDColor забяспечвае высакаякасную афарбоўку агульных малюнкаў з мінімальнымі артэфактамі. Лепшы выбар з усіх мадэляў афарбоўкі.</string>
     <string name="model_ddcolor_artistic">DDColor Навучаныя і прыватныя наборы мастацкіх дадзеных; стварае разнастайныя і мастацкія вынікі афарбоўвання з меншай колькасцю нерэальных каляровых артэфактаў.</string>
     <string name="model_birefnet">Лёгкая мадэль BiRefNet на аснове Swin Transformer для дакладнага выдалення фону.</string>
+    <string name="model_inspyrenet">Высакаякаснае выдаленне фону з рэзкімі краямі і выдатным захаваннем дэталяў, асабліва на складаных аб\'ектах і складаным фоне.</string>
+    <string name="model_isnet">Мадэль выдалення фону, якая стварае дакладныя маскі з гладкімі краямі, прыдатныя для агульных аб\'ектаў і ўмераным захаваннем дэталяў.</string>
 </resources>
