--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="model_ddcolor">Толық DDColor үлгісі ең аз артефактілермен жалпы кескіндер үшін жоғары сапалы түс беруді қамтамасыз етеді. Барлық бояу үлгілерінің ең жақсы таңдауы.</string>
     <string name="model_ddcolor_artistic">DDColor Оқытылған және жеке көркем деректер жиыны; азырақ шынайы емес түсті артефактілермен әртүрлі және көркем бояу нәтижелерін береді.</string>
     <string name="model_birefnet">Фонды дәл жою үшін Swin Transformer негізіндегі жеңіл BiRefNet моделі.</string>
+    <string name="model_inspyrenet">Өткір жиектері бар жоғары сапалы фонды жою және егжей-тегжейлерді тамаша сақтау, әсіресе күрделі нысандар мен күрделі фондар.</string>
+    <string name="model_isnet">Жалпы нысандарға және орташа бөлшектерді сақтауға жарамды, тегіс жиектері бар дәл маскаларды шығаратын фонды жою үлгісі.</string>
 </resources>
