--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2013,4 +2013,6 @@
     <string name="model_ddcolor">पूर्ण DDCcolor मॉडेल किमान कलाकृतींसह सामान्य प्रतिमांसाठी उच्च-गुणवत्तेचे रंगीकरण प्रदान करते. सर्व रंगीकरण मॉडेल्सची सर्वोत्तम निवड.</string>
     <string name="model_ddcolor_artistic">DDColor प्रशिक्षित आणि खाजगी कलात्मक डेटासेट; कमी अवास्तव कलर आर्टिफॅक्ट्ससह वैविध्यपूर्ण आणि कलात्मक रंगीकरण परिणाम तयार करते.</string>
     <string name="model_birefnet">अचूक पार्श्वभूमी काढण्यासाठी स्विन ट्रान्सफॉर्मरवर आधारित लाइटवेट BiRefNet मॉडेल.</string>
+    <string name="model_inspyrenet">तीक्ष्ण कडा आणि उत्कृष्ट तपशील संरक्षणासह उच्च-गुणवत्तेची पार्श्वभूमी काढणे, विशेषत: जटिल वस्तू आणि अवघड पार्श्वभूमीवर.</string>
+    <string name="model_isnet">पार्श्वभूमी काढण्याचे मॉडेल जे गुळगुळीत कडा असलेले अचूक मुखवटे तयार करते, सामान्य वस्तूंसाठी योग्य आणि मध्यम तपशील संरक्षण.</string>
 </resources>
