--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="model_ddcolor">ਪੂਰਾ DDCcolor ਮਾਡਲ ਘੱਟੋ-ਘੱਟ ਕਲਾਤਮਕ ਚੀਜ਼ਾਂ ਦੇ ਨਾਲ ਆਮ ਚਿੱਤਰਾਂ ਲਈ ਉੱਚ-ਗੁਣਵੱਤਾ ਰੰਗੀਕਰਨ ਪ੍ਰਦਾਨ ਕਰਦਾ ਹੈ। ਸਾਰੇ ਰੰਗੀਕਰਨ ਮਾਡਲਾਂ ਦੀ ਸਭ ਤੋਂ ਵਧੀਆ ਚੋਣ।</string>
     <string name="model_ddcolor_artistic">ਡੀਡੀਕਲਰ ਸਿਖਲਾਈ ਪ੍ਰਾਪਤ ਅਤੇ ਨਿੱਜੀ ਕਲਾਤਮਕ ਡੇਟਾਸੇਟ; ਘੱਟ ਗੈਰ-ਯਥਾਰਥਵਾਦੀ ਰੰਗਾਂ ਦੀਆਂ ਕਲਾਕ੍ਰਿਤੀਆਂ ਦੇ ਨਾਲ ਵਿਭਿੰਨ ਅਤੇ ਕਲਾਤਮਕ ਰੰਗੀਕਰਨ ਨਤੀਜੇ ਪੈਦਾ ਕਰਦਾ ਹੈ।</string>
     <string name="model_birefnet">ਬੈਕਗਰਾਊਂਡ ਨੂੰ ਸਹੀ ਤਰ੍ਹਾਂ ਹਟਾਉਣ ਲਈ ਸਵਿਨ ਟਰਾਂਸਫਾਰਮਰ \'ਤੇ ਆਧਾਰਿਤ ਲਾਈਟਵੇਟ BiRefNet ਮਾਡਲ।</string>
+    <string name="model_inspyrenet">ਤਿੱਖੇ ਕਿਨਾਰਿਆਂ ਅਤੇ ਸ਼ਾਨਦਾਰ ਵੇਰਵੇ ਦੀ ਸੰਭਾਲ ਦੇ ਨਾਲ ਉੱਚ-ਗੁਣਵੱਤਾ ਵਾਲੇ ਪਿਛੋਕੜ ਨੂੰ ਹਟਾਉਣਾ, ਖਾਸ ਤੌਰ \'ਤੇ ਗੁੰਝਲਦਾਰ ਵਸਤੂਆਂ ਅਤੇ ਗੁੰਝਲਦਾਰ ਪਿਛੋਕੜਾਂ \'ਤੇ।</string>
+    <string name="model_isnet">ਬੈਕਗ੍ਰਾਉਂਡ ਹਟਾਉਣ ਵਾਲਾ ਮਾਡਲ ਜੋ ਨਿਰਵਿਘਨ ਕਿਨਾਰਿਆਂ ਦੇ ਨਾਲ ਸਹੀ ਮਾਸਕ ਪੈਦਾ ਕਰਦਾ ਹੈ, ਆਮ ਵਸਤੂਆਂ ਲਈ ਢੁਕਵਾਂ ਅਤੇ ਮੱਧਮ ਵੇਰਵੇ ਦੀ ਸੰਭਾਲ ਕਰਦਾ ਹੈ।</string>
 </resources>
