--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2014,4 +2014,6 @@
     <string name="model_ddcolor">Модель Full DDColor обеспечивает высококачественную раскраску обычных изображений с минимальными артефактами. Лучший выбор из всех моделей раскрашивания.</string>
     <string name="model_ddcolor_artistic">DDColor Обученные и частные художественные наборы данных; дает разнообразные и художественные результаты раскрашивания с меньшим количеством нереалистичных цветовых артефактов.</string>
     <string name="model_birefnet">Легкая модель BiRefNet на основе Swin Transformer для точного удаления фона.</string>
+    <string name="model_inspyrenet">Качественное удаление фона с острыми краями и отличным сохранением деталей, особенно на сложных объектах и ​​сложном фоне.</string>
+    <string name="model_isnet">Модель удаления фона, которая создает точные маски с гладкими краями, подходящую для обычных объектов и умеренного сохранения деталей.</string>
 </resources>
