--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2011,4 +2011,6 @@
     <string name="model_ddcolor">โมเดล DDColor เต็มรูปแบบมอบการปรับสีคุณภาพสูงสำหรับภาพทั่วไปที่มีจุดบกพร่องน้อยที่สุด ตัวเลือกที่ดีที่สุดของโมเดลการปรับสีทั้งหมด</string>
     <string name="model_ddcolor_artistic">ชุดข้อมูลศิลปะที่ได้รับการฝึกอบรมและส่วนตัวของ DDColor สร้างผลลัพธ์การให้สีที่หลากหลายและเป็นศิลปะโดยมีสิ่งเจือปนของสีที่ไม่สมจริงน้อยลง</string>
     <string name="model_birefnet">รุ่น BiRefNet น้ำหนักเบาที่ใช้ Swin Transformer เพื่อการลบพื้นหลังที่แม่นยำ</string>
+    <string name="model_inspyrenet">การลบพื้นหลังคุณภาพสูงพร้อมขอบคมและการรักษารายละเอียดที่ยอดเยี่ยม โดยเฉพาะกับวัตถุที่ซับซ้อนและพื้นหลังที่ยุ่งยาก</string>
+    <string name="model_isnet">โมเดลการลบพื้นหลังที่สร้างมาสก์ที่แม่นยำพร้อมขอบเรียบ เหมาะสำหรับวัตถุทั่วไปและการรักษารายละเอียดปานกลาง</string>
 </resources>
