--- a/core/resources/src/main/res/values-bn/strings.xml
+++ b/core/resources/src/main/res/values-bn/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="model_ddcolor">সম্পূর্ণ DDCcolor মডেল ন্যূনতম শিল্পকর্ম সহ সাধারণ চিত্রগুলির জন্য উচ্চ-মানের রঙিনকরণ সরবরাহ করে। সমস্ত রঙিন মডেলের সেরা পছন্দ।</string>
     <string name="model_ddcolor_artistic">DDColor প্রশিক্ষিত এবং ব্যক্তিগত শৈল্পিক ডেটাসেট; কম অবাস্তব রঙের শিল্পকর্মের সাথে বৈচিত্র্যময় এবং শৈল্পিক রঙিন ফলাফল তৈরি করে।</string>
     <string name="model_birefnet">সঠিক পটভূমি অপসারণের জন্য সুইন ট্রান্সফরমারের উপর ভিত্তি করে হালকা ওজনের BiRefNet মডেল।</string>
+    <string name="model_inspyrenet">ধারালো প্রান্ত এবং চমৎকার বিশদ সংরক্ষণের সাথে উচ্চ-মানের পটভূমি অপসারণ, বিশেষ করে জটিল বস্তু এবং জটিল পটভূমিতে।</string>
+    <string name="model_isnet">পটভূমি অপসারণ মডেল যা মসৃণ প্রান্ত সহ সঠিক মুখোশ তৈরি করে, সাধারণ বস্তুর জন্য উপযুক্ত এবং মাঝারি বিস্তারিত সংরক্ষণ।</string>
 </resources>
