--- a/core/resources/src/main/res/values-ca/strings.xml
+++ b/core/resources/src/main/res/values-ca/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="model_ddcolor">El model DDColor complet ofereix una coloració d\'alta qualitat per a imatges generals amb un mínim d\'artefactes. La millor opció de tots els models de coloració.</string>
     <string name="model_ddcolor_artistic">DDColor Conjunts de dades artístics entrenats i privats; produeix resultats de coloració diversos i artístics amb menys artefactes de color poc realistes.</string>
     <string name="model_birefnet">Model lleuger BiRefNet basat en Swin Transformer per eliminar amb precisió el fons.</string>
+    <string name="model_inspyrenet">Eliminació de fons d\'alta qualitat amb vores nítides i excel·lent preservació dels detalls, especialment en objectes complexos i fons complicats.</string>
+    <string name="model_isnet">Model d\'eliminació de fons que produeix màscares precises amb vores llises, aptes per a objectes generals i conservació moderada dels detalls.</string>
 </resources>
