--- a/core/resources/src/main/res/values-fil/strings.xml
+++ b/core/resources/src/main/res/values-fil/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="model_ddcolor">Ang buong modelo ng DDColor ay naghahatid ng mataas na kalidad na colorization para sa mga pangkalahatang larawan na may kaunting artifact. Pinakamahusay na pagpipilian ng lahat ng mga modelo ng colorization.</string>
     <string name="model_ddcolor_artistic">DDColor Sinanay at pribadong artistikong dataset; gumagawa ng magkakaibang at masining na mga resulta ng colorization na may mas kaunting hindi makatotohanang mga artifact ng kulay.</string>
     <string name="model_birefnet">Magaang modelo ng BiRefNet batay sa Swin Transformer para sa tumpak na pag-alis ng background.</string>
+    <string name="model_inspyrenet">De-kalidad na pag-alis ng background na may matatalim na gilid at mahusay na pangangalaga sa detalye, lalo na sa mga kumplikadong bagay at nakakalito na background.</string>
+    <string name="model_isnet">Modelo sa pag-alis ng background na gumagawa ng mga tumpak na maskara na may makinis na mga gilid, na angkop para sa mga pangkalahatang bagay at katamtamang pangangalaga sa detalye.</string>
 </resources>
