--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="model_ddcolor">முழு DDColor மாதிரியானது குறைந்தபட்ச கலைப்பொருட்கள் கொண்ட பொதுவான படங்களுக்கு உயர்தர வண்ணமயமாக்கலை வழங்குகிறது. அனைத்து வண்ணமயமாக்கல் மாதிரிகளின் சிறந்த தேர்வு.</string>
     <string name="model_ddcolor_artistic">DDColor பயிற்சி பெற்ற மற்றும் தனிப்பட்ட கலை தரவுத்தொகுப்புகள்; குறைவான யதார்த்தமற்ற வண்ண கலைப்பொருட்களுடன் மாறுபட்ட மற்றும் கலை வண்ணமயமாக்கல் முடிவுகளை உருவாக்குகிறது.</string>
     <string name="model_birefnet">துல்லியமான பின்னணியை அகற்றுவதற்காக ஸ்வின் டிரான்ஸ்ஃபார்மரை அடிப்படையாகக் கொண்ட இலகுரக BiRefNet மாதிரி.</string>
+    <string name="model_inspyrenet">குறிப்பாக சிக்கலான பொருள்கள் மற்றும் தந்திரமான பின்னணியில் கூர்மையான விளிம்புகள் மற்றும் சிறந்த விவரங்களைப் பாதுகாப்பதன் மூலம் உயர்தர பின்னணி நீக்கம்.</string>
+    <string name="model_isnet">மென்மையான விளிம்புகள் கொண்ட துல்லியமான முகமூடிகளை உருவாக்கும் பின்னணி அகற்றும் மாதிரி, பொதுவான பொருள்கள் மற்றும் மிதமான விவரங்களைப் பாதுகாப்பதற்கு ஏற்றது.</string>
 </resources>
