--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="model_ddcolor">పూర్తి DDColor మోడల్ కనీస కళాఖండాలతో సాధారణ చిత్రాల కోసం అధిక-నాణ్యత రంగులను అందిస్తుంది. అన్ని రంగుల నమూనాల ఉత్తమ ఎంపిక.</string>
     <string name="model_ddcolor_artistic">DDColor శిక్షణ పొందిన మరియు ప్రైవేట్ కళాత్మక డేటాసెట్‌లు; తక్కువ అవాస్తవిక రంగు కళాఖండాలతో విభిన్న మరియు కళాత్మక రంగుల ఫలితాలను ఉత్పత్తి చేస్తుంది.</string>
     <string name="model_birefnet">ఖచ్చితమైన బ్యాక్‌గ్రౌండ్ రిమూవల్ కోసం స్విన్ ట్రాన్స్‌ఫార్మర్ ఆధారంగా తేలికైన BiRefNet మోడల్.</string>
+    <string name="model_inspyrenet">పదునైన అంచులు మరియు అద్భుతమైన వివరాల సంరక్షణతో అధిక-నాణ్యత నేపథ్య తొలగింపు, ముఖ్యంగా సంక్లిష్ట వస్తువులు మరియు గమ్మత్తైన నేపథ్యాలపై.</string>
+    <string name="model_isnet">సాధారణ వస్తువులు మరియు మితమైన వివరాల సంరక్షణకు అనువైన మృదువైన అంచులతో ఖచ్చితమైన మాస్క్‌లను ఉత్పత్తి చేసే బ్యాక్‌గ్రౌండ్ రిమూవల్ మోడల్.</string>
 </resources>
