--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2014,4 +2014,6 @@
     <string name="model_ddcolor">Модель Full DDColor забезпечує високоякісне розфарбовування загальних зображень із мінімальними артефактами. Найкращий вибір серед усіх моделей забарвлення.</string>
     <string name="model_ddcolor_artistic">DDColor Навчені та приватні художні набори даних; дає різноманітні та художні результати забарвлення з меншою кількістю нереалістичних кольорових артефактів.</string>
     <string name="model_birefnet">Легка модель BiRefNet на основі Swin Transformer для точного видалення фону.</string>
+    <string name="model_inspyrenet">Високоякісне видалення фону з чіткими краями та чудовим збереженням деталей, особливо на складних об’єктах і складному фоні.</string>
+    <string name="model_isnet">Модель видалення фону, яка створює точні маски з гладкими краями, придатні для звичайних об’єктів і помірне збереження деталей.</string>
 </resources>
