--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2035,4 +2035,6 @@
     <string name="model_birefnet">Lightweight BiRefNet model based on Swin Transformer for accurate background removing.</string>
     <string name="model_inspyrenet">High-quality background removal with sharp edges and excellent detail preservation, especially on complex objects and tricky backgrounds.</string>
     <string name="model_isnet">Background removal model that produces accurate masks with smooth edges, suitable for general objects and moderate detail preservation.</string>
+    <string name="model_already_downloaded">Model already downloaded</string>
+    <string name="model_successfully_imported">Model successfully imported</string>
 </resources>
